# Krypton-The-Product

./: .gitignore  README.md
krypton-backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  binance_kek.py  pyproject.toml  requirements.txt
krypton-backend/alembic/: env.py
krypton-backend/alembic/versions/: 0351c24ab95c_create_chart_contexts_table.py  2fc14667492a_create_users_table.py  4e3116d79ae7_initial_migration_create_users.py  6baa479fb5fd_create_chart_contexts_table.py  7795c463c2fd_initial_migration_create_users.py  b3dddb9c5b63_initial_migration_create_users.py  daba41601af1_initial_migration_create_users.py  efa3cbeb698c_initial_migration_create_users.py  ff159fa08860_add_binance_credentials_table.py
krypton-backend/app/: auth.py  crypto.py  main.py  models.py
krypton-backend/app/agents/: graph.py  market_analysis_agent.py  nodes.py  risk_agent.py  sentiment_agent.py  state.py  synthesis_agent.py
krypton-backend/app/core/: config.py  encryption.py  logger.py  security.py
krypton-backend/app/database/: base.py  database.py  db.py  db_models.py  session.py
krypton-backend/app/models/: api_key.py  binance_model.py  chart_context.py  integration_key.py  otp_model.py  user_model.py
krypton-backend/app/routers/: agent.py  agents_router.py  auth.py  auth_router.py  binance_router.py  chart_context.py  chat_router.py  integration.py  llm_key.py  market.py  market_router.py  news.py  news_router.py  risk.py  status.py
krypton-backend/app/schemas/: agent.py  auth_schema.py  chart_context.py  integration.py  llm_key.py  market.py  news.py  (+2 more)
(+29 files in other folders)
