[project]
name = "krypton-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.116.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "ccxt>=4.5.65",
    "fastapi>=0.139.0",
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "groq>=1.5.0",
    "langchain-core>=1.4.9",
    "langgraph>=1.2.9",
    "openai>=2.45.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "sqlalchemy>=2.0.51",
    "ta>=0.11.0",
    "vadersentiment>=3.3.2",
    "uvicorn[standard]>=0.35.0",
]
